# bbedit

./: .gitignore  .gitmodules  LICENSE  README.md  pyproject.toml
bbedit_jump_points/: Cargo.toml  README.md  justfile
bbedit_jump_points/src/: lib.rs
languages/: ssh_config.plist
languages/Justfile/: Justfile.plist  README.md
scripts/: README.md  _conf.json  chatgpt.py  jump_points.py
upstream/: README.md
