[tool.poetry]
name = "bbedit-extras"
version = "0.1.1"
description = "Things I made for BBEdit"
authors = ["Kirk Strauser <kirk@strauser.com>"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.11"
xdg = "^6.0.0"
pyyaml = "^6.0.1"
aiohttp = "^3.9.0b0"
openai = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
'push_bbedit_point' = 'scripts.jump_points:push'
'pop_bbedit_point' = 'scripts.jump_points:pop'
'ChatGPT conversation' = 'scripts.chatgpt:process_stdin'

[tool.black]
line-length = 99

[tool.mypy]
check_untyped_defs = true
